--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<canvas width="600" height="400" id="myCanvas"></canvas>
 		<br>
 		<!--- Create Bootstrap button --->
-		<button class="btn btn-warning btn-lg">Dear Mom</button>
+		<button class="btn btn-warning btn-lg" onclick="playSound()">Dear Mom</button>
 	</center>
-	<audio id="myAudio" src="bdayaudio.mp3" onclick="playSound()"></audio>
+	<audio id="myAudio" src="bdayaudio.mp3"></audio>
 	<script src="main.js"></script>
 </body>
 </html>
